# pipe-experiments

./: CMakeLists.txt  README.md  reader.cpp  writer.cpp
